--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -27,37 +27,38 @@
   <div class='row'>
     <div class='col-lg-12'>
       <div class="list-group">
-      {% for campaign in object_list %}
-        <a href="{% url 'campaign-detail' campaign.id %}" class="list-group-item">
-          <h4 class="list-group-item-heading">
-            {{ campaign.name }}
-            <small>
-              {% if campaign.is_sent %}
-              <span class='label label-success'>SENT</span>
-              {% else %}
-              <span class='label label-warning'>NOT SENT</span>
-              {% endif %}
-            </small>
-          </h4>
-          <p class="list-group-item-text">
-          {% if campaign.is_sent %}
-          Sent to {{campaign.recipient_count|default:'0'|intcomma}} subscriber{{campaign.recipient_count|pluralize}}
-          <br />
-          {% endif %}
-          <strong>Subject:</strong> {{ campaign.email_subject }}
-          <br />
-          <strong>Sent to:</strong> {{ campaign.email_list.count_subscribers|intcomma }} subscriber{{ campaign.email_list.count_subscribers|pluralize }}
-          <br />
-          <small class='text-muted'>created: {{ campaign.created }}</small>
-          </p>
-        </a>
+        {% for campaign in object_list %}
+          <a href="{% url 'campaign-detail' campaign.id %}" class="list-group-item">
+            <h4 class="list-group-item-heading">
+              {{ campaign.name }}
+              <small>
+                {% if campaign.is_sent %}
+                <span class='label label-success'>SENT</span>
+                {% else %}
+                <span class='label label-warning'>NOT SENT</span>
+                {% endif %}
+              </small>
+            </h4>
+            <p class="list-group-item-text">
+            {% if campaign.is_sent %}
+            Sent to {{campaign.recipient_count|default:'0'|intcomma}}
+            subscriber{{campaign.recipient_count|pluralize}}
+            <br />
+            {% endif %}
+            <strong>Subject:</strong> {{ campaign.email_subject }}
+            <br />
+            <strong>Sent to:</strong> {{ campaign.email_list.count_subscribers|intcomma }} subscriber{{ campaign.email_list.count_subscribers|pluralize }}
+            <br />
+            <small class='text-muted'>created: {{ campaign.created }}</small>
+            </p>
+          </a>
+        {% empty %}
+          <div class='alert alert-warning'>
+            No campaign created yet.
+            <a href="{% url 'campaign-new' %}">Go create one &raquo;</a>
+          </div>
+        {% endfor %}
       </div>
-      {% empty %}
-        <div class='alert alert-warning'>
-          No campaign created yet.
-          <a href="{% url 'campaign-new' %}">Go create one &raquo;</a>
-        </div>
-      {% endfor %}
     </div>
   </div>
 
