--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -11,8 +11,9 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     {% if user.is_authenticated %}
+      <a href="/campaigns/new" class="btn btn-default navbar-btn pull-left">{% trans "Compose email" %}</a>
       <ul class="nav navbar-nav">
-        <li><a href="/campaigns">{% trans "Campaigns" %}</a></li>
+        <li><a href="/campaigns">{% trans "Emails" %}</a></li>
         <li><a href="/subscribers">{% trans "Subscribers" %}</a></li>
         <li><a href="/templates">{% trans "Templates" %}</a></li>
       </ul>
