--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -3,7 +3,17 @@
 
 
 {% block content %}
-<legend>{{ list.name }} subscribers ({{total_count}})</legend>
+<legend>
+  {{ list.name }} subscribers ({{total_count}})
+  <a class="btn btn-primary btn-xs pull-right" href="{% url 'subscriber-management-list-import' list.uuid %}">{% trans 'Import CSV' %}</a>
+</legend>
+
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}">{% trans 'Subscribers' %}</a></li>
+  <li role="presentation"><a href="#">{% trans 'Newsletter homepage' %}</a></li>
+  <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list.uuid %}">{% trans 'Signup Form' %}</a></li>
+  <li role="presentation"><a href="#">{% trans 'Settings' %}</a></li>
+</ul>
 {% if not object_list %}
   <p>{% trans 'No subscribers' %}</p>
 {% else %}
@@ -13,8 +23,7 @@
         <tr>
           <th><input type="checkbox" id="select_all"/></th>
           <th>{% trans 'Email' %}</th>
-          <th>{% trans 'First name' %}</th>
-          <th>{% trans 'Last name' %}</th>
+          <th>{% trans 'Name' %}</th>
           <th>{% trans 'Timezone' %}</th>
           <th>{% trans 'Date join' %}</th>
           <th>{% trans 'Action' %}</th>
@@ -25,20 +34,15 @@
           <tr>
             <td><input type="checkbox" class="item-checkbox" name="bulk_item" value="{{item.uuid}}"/></td>
             <td>{{ item.email }}</td>
-            <td>{{ item.first_name }}</td>
-            <td>{{ item.last_name }}</td>
+            <td>{{ item.full_name }}</td>
             <td>{{ item.timezone_str }}</td>
             <td>{{ item.created }}</td>
             <td>
-              <a href="{% url 'subscriber-management-subscriber-unsubscribe' item.uuid item.token_unsubscribe %}"
-                class="btn btn primary">
-                {% trans 'Unsubscribe' %}
-              </a>
               <a
                 href="#"
                 data-delete-url="{% url 'subscriber-management-subscriber-delete' list.uuid item.uuid %}"
                 data-email="{{item.email}}"
-                class="btn btn-danger right"
+                class="btn btn-danger btn-xs right"
                 data-toggle="modal"
                 data-target="#subscriber-delete-confirmation" class='text-danger'>
                 {% trans 'Delete' %}
@@ -48,7 +52,7 @@
         {% endfor %}
       </tbody>
     <table>
-    <button class="btn btn-danger" name="bulk_action" value="delete">{% trans 'Bulk delete' %}</button>
+    <button class="btn btn-danger" name="bulk_action" value="delete" disabled>{% trans 'Bulk delete' %}</button>
   <form>
   <br>
   <br>
@@ -82,7 +86,7 @@
   {% endif %}
 {% endif %}
 
-<a class="btn btn-primary" href="{% url 'subscriber-management-list-import' list.uuid %}">{% trans 'Import CSV' %}</a>
+
 
 <div id='subscriber-delete-confirmation' class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
@@ -112,9 +116,24 @@
 
 {% block script %}
     <script>
+    function bulkButton() {
+      var items = $('.item-checkbox').get()
+      $('[name="bulk_action"]').prop('disabled', true)
+      for (var i = 0; i < items.length; i++) {
+        if ($(items[i]).prop('checked') == true) {
+          $('[name="bulk_action"]').prop('disabled', false)
+          return
+        }
+      }
+    }
+
     $('#select_all').click(function() {
       var val = $(this).prop('checked')
       $('.item-checkbox').prop('checked', val)
+      bulkButton()
+    })
+    $('.item-checkbox').on('change', function () {
+      bulkButton()
     })
     $('[data-delete-url]').click(function() {
       $('#user_email').text($(this).data('email'))
