Add subscriber list settings.

--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -12,7 +12,7 @@
   <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}">{% trans 'Subscribers' %}</a></li>
   <li role="presentation"><a href="#">{% trans 'Newsletter homepage' %}</a></li>
   <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list.uuid %}">{% trans 'Signup Form' %}</a></li>
-  <li role="presentation"><a href="#">{% trans 'Settings' %}</a></li>
+  <li role="presentation"><a href="{% url 'subscriber-management-list-settings' list.uuid %}">{% trans 'Settings' %}</a></li>
 </ul>
 {% if not object_list %}
   <p>{% trans 'No subscribers' %}</p>
