--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -10,7 +10,7 @@
 
 <ul class="nav nav-tabs">
   <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}">{% trans 'Subscribers' %}</a></li>
-  <li role="presentation"><a href="#">{% trans 'Newsletter homepage' %}</a></li>
+  <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
   <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list.uuid %}">{% trans 'Signup Form' %}</a></li>
   <li role="presentation"><a href="{% url 'subscriber-management-list-settings' list.uuid %}">{% trans 'Settings' %}</a></li>
 </ul>
