--- a/subscriber_management/templates/list_newsletter_homepage.html
+++ b/subscriber_management/templates/list_newsletter_homepage.html
@@ -5,7 +5,7 @@
 {% block content %}
 <legend>
   {{ list_item.name }} subscribers ({{list_item.count_subscribers}})
-  <a class="btn btn-primary btn-xs pull-right" href="{% url 'subscriber-management-list-import' list_item.uuid %}">{% trans 'Import CSV' %}</a>
+  <a class="btn btn-primary btn-xs pull-right" href="#" data-toggle="modal" data-target="#subscriber_import_csv">{% trans 'Import CSV' %}</a>
 </legend>
 <ul class="nav nav-tabs">
   <li role="presentation"><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
@@ -51,4 +51,6 @@
   </div>
   <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
 </form>
+
+{% include 'import_csv.html' %}
 {% endblock %}
