--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -5,7 +5,7 @@
 {% block content %}
 <legend>
   {{ list_item.name }} subscribers ({{list_item.count_subscribers}})
-  <a class="btn btn-primary btn-xs pull-right" href="{% url 'subscriber-management-list-import' list_item.uuid %}">{% trans 'Import CSV' %}</a>
+  <a class="btn btn-primary btn-xs pull-right" href="#" data-toggle="modal" data-target="#subscriber_import_csv">{% trans 'Import CSV' %}</a>
 </legend>
 <ul class="nav nav-tabs">
   <li role="presentation"><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
@@ -27,6 +27,8 @@
 {% endfor %}
 <hr>
 <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#subscriber_list_delete_confirmation">{% trans 'Delete all '%}({{list_item.count_subscribers}})</a>
+
+{% include 'import_csv.html' %}
 
 <div id='subscriber_list_delete_confirmation' class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
@@ -55,4 +57,5 @@
       </form>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
+</div>
 {% endblock %}
