--- a/subscriber_management/templates/subscriber_signup_form.html
+++ b/subscriber_management/templates/subscriber_signup_form.html
@@ -6,7 +6,7 @@
 {% block content %}
 <legend>
   {{ list_item.name }} subscribers ({{list_item.count_subscribers}})
-  <a class="btn btn-primary btn-xs pull-right" href="{% url 'subscriber-management-list-import' list_item.uuid %}">{% trans 'Import CSV' %}</a>
+  <a class="btn btn-primary btn-xs pull-right" href="#" data-toggle="modal" data-target="#subscriber_import_csv">{% trans 'Import CSV' %}</a>
 </legend>
 
 <ul class="nav nav-tabs">
@@ -31,6 +31,8 @@
   </div>
 </form>
 <button class="btn btn-primary copy_button" name="copy" data-clipboard-target="#signup_form_snippet">{% trans 'Copy' %}</button>
+
+{% include 'import_csv.html' %}
 {% endblock %}
 
 {% block script %}
