--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -3,14 +3,11 @@
 
 
 {% block content %}
-<legend>
-  {{ list_item.name }} subscribers ({{list_item.count_subscribers}})
-  <a class="btn btn-primary btn-xs pull-right" href="#" data-toggle="modal" data-target="#subscriber_import_csv">{% trans 'Import CSV' %}</a>
-</legend>
+{% include 'list_header.html' %}
 <ul class="nav nav-tabs">
   <li role="presentation"><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
   <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
-  <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">{% trans 'Signup Form' %}</a></li>
+  <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">{% trans 'Signup form' %}</a></li>
   <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-settings' list_item.uuid %}">{% trans 'Settings' %}</a></li>
 </ul>
 <br>
