success_template and bulk delete confirmation

--- a/subscriber_management/templates/subscriber_join_success.html
+++ b/subscriber_management/templates/subscriber_join_success.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 <p>
+  {%if list_item.success_template %}
+    {{list_item.success_template}}
+  {% else %}
   {% trans 'You have successfully subscribed to' %}{{list_item.title}}
+  {% endif %}
 </p>
 {% endblock %}
