--- a/subscriber_management/templates/list_header.html
+++ b/subscriber_management/templates/list_header.html
@@ -5,8 +5,8 @@
   {{ list_item.name }} subscribers
   <a class="btn btn-primary btn-xs pull-right" href="#" data-toggle="modal" data-target="#subscriber_import_csv">{% trans 'Import CSV' %}</a>
 </legend>
-<p class="lead">
-  {{list_item.count_subscribers|intcomma}} {% trans 'subscriber' %}{{list_item.count_subscribers|pluralize}}
+<p>
+  <span class="lead">{{list_item.count_subscribers|intcomma}}</span> {% trans 'subscriber' %}{{list_item.count_subscribers|pluralize}}
   <br>
   <br>
   Homepage url: <a target="_blank" href="{% url 'subscriber-management-join' list_item.uuid %}">http://minimail.fullweb.io{% url 'subscriber-management-join' list_item.uuid %}</a>
