--- a/campaign_management/templates/campaign_new_or_edit.html
+++ b/campaign_management/templates/campaign_new_or_edit.html
@@ -87,7 +87,7 @@ janet@gmail.com, Janet Dupont'></textarea>
       <div class='row'>
         <div class='col-lg-6 col-lg-offset-3'>
           <hr />
-          <button class='btn btn-success pull-right'>Next: Compose Email</button>
+          <button class='btn btn-success pull-right'>Next: <strong>Compose Email</strong> &raquo;</button>
         </div>
       </div>
 
