--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -21,8 +21,8 @@
           <th><input type="checkbox" id="select_all"/></th>
           <th>{% trans 'Email' %}</th>
           <th>{% trans 'Name' %}</th>
-          <th>{% trans 'Location' %}</th>
-          <th>{% trans 'Country' %}</th>
+          <th>{% trans 'Timezone' %}</th>
+          <th>{% trans 'Country code' %}</th>
           <th>{% trans 'Date join' %}</th>
           <th>{% trans 'Action' %}</th>
         <tr>
@@ -33,8 +33,8 @@
             <td><input type="checkbox" class="item-checkbox" name="bulk_item" value="{{item.uuid}}"/></td>
             <td>{{ item.email }}</td>
             <td>{{ item.full_name }}</td>
-            <td>{{ item.timezone_str }}</td>
-            <td>{{ item.cc }}</td>
+            <td>{{ item.human_tz }}</td>
+            <td>{{ item.country }}</td>
             <td>{{ item.created }}</td>
             <td>
               <a
