--- a/campaign_management/templates/campaign_header.html
+++ b/campaign_management/templates/campaign_header.html
@@ -5,9 +5,9 @@
 
 {% block title %}
   {% if campaign %}
-  {% trans "Editing campaign" %} "{{campaign.name}}"
+  {% trans "Editing email" %} "{{campaign.email_subject}}"
   {% else %}
-    {% trans "New campaign" %}
+    {% trans "New email" %}
   {% endif %}
 {% endblock %}
 
@@ -18,7 +18,7 @@
       <h3>
         <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
         {% if campaign %}
-        / <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.name}}</a>
+        / <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.email_subject}}</a>
         / Edit
         {% else %}
         / {% trans "New email" %}
@@ -40,7 +40,7 @@
           <label for="{{form.email_from_name.auto_id}}" class='control-label'>From name:</label>
           <input id="{{form.email_from_name.auto_id}}" name="{{form.email_from_name.name}}" class='form-control'
                  tabindex='3' maxlength='{{form.email_from_name.field.max_length}}'
-                 value='{{form.email_from_name.value|default:""}}'/>
+                 value='{{form.email_from_name.value|default:user.first_name}}'/>
           <div class='help-block'>The name your recipients will see in the <code>From:</code> field.</div>
         </div>
         <div class="form-group">
@@ -51,7 +51,7 @@
                  class='form-control'
                  tabindex='3'
                  maxlength='{{form.email_from_email.field.max_length}}'
-                 value='{{form.email_from_email.value|default:""}}'/>
+                 value='{{form.email_from_email.value|default:user.email}}'/>
           <div class='help-block'>The email address your recipients will see in the <code>From:</code> field.</div>
         </div>
         <div class="form-group">
@@ -59,6 +59,7 @@
           <input id="{{form.email_subject.auto_id}}"
                  name="{{form.email_subject.name}}" class='form-control' tabindex='2'
                  maxlength='{{form.email_subject.field.max_length}}'
+                 placeholder='Issue #1: About this newsletter'
                  value='{{form.email_subject.value|default:""}}'/>
           <div class='help-block'>Max 150 characters. You can you emojis too.</div>
         </div>
