--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -13,9 +13,9 @@
   <div class='row'>
     <div class='col-lg-12'>
       <h3>
-        <a href='{% url 'campaign-list' %}'>{% trans "Campaigns" %}</a>
-        / <a href='{% url 'campaign-detail' campaign.id %}'>{{ campaign.name }}</a>
-        / {% trans 'Campaign review' %}
+        <a href='{% url 'campaign-list' %}'>{% trans "Emails" %}</a>
+        / <a href='{% url 'campaign-detail' campaign.id %}'>{{campaign.email_subject}}</a>
+        / {% trans 'Email review' %}
       </h3>
     </div>
   </div>
@@ -46,7 +46,7 @@
           </li>
           <li class="list-group-item text-center">
             <strong>HTML email</strong>
-            <a href='{% url "campaign-update" campaign.id %}'><small>edit</small></a>
+            <a href='{% url "campaign-compose-email" campaign.id %}'><small>edit</small></a>
             <div class='preview' style='position: relative; min-height: 600px; height:auto; background: #f9f9f9; overflow: hidden;margin-top:2rem'>
               <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'
                 src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
