--- a/subscriber_management/templates/list_list.html
+++ b/subscriber_management/templates/list_list.html
@@ -30,7 +30,7 @@
         <h4 class='list-group-item-heading'>
           {{ item.name }}
           <small>
-            {{ item.count_subscribers|intcomma }} subscriber{{item.count_subscribers|pluralize}}
+            {{ item.count_validated_subscribers|intcomma }} subscriber{{item.count_validated_subscribers|pluralize}}
           </small>
         </h4>
         <p class="list-group-item-text">
