--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -23,7 +23,8 @@
   <span class="error-block text-danger">{{error}}</span>
 {% endfor %}
 <hr>
-<a href="#" class="btn btn-danger" data-toggle="modal" data-target="#subscriber_list_delete_confirmation">{% trans 'Delete all '%}({{list_item.count_subscribers}})</a>
+<a href="#" class="btn btn-danger" data-toggle="modal"
+  data-target="#subscriber_list_delete_confirmation">{% trans 'Delete all '%}({{list_item.count_validated_subscribers}})</a>
 
 {% include 'import_csv.html' %}
 
@@ -44,7 +45,7 @@
             <li>All the information will be lost forever.</li>
           </ul>
           <ul>
-            <li>{{list_item.count_subscribers}} {% trans 'subscribers will be deleted' %}.</li>
+            <li>{{list_item.count_validated_subscribers}} {% trans 'subscribers will be deleted' %}.</li>
           </ul>
         </div>
         <div class="modal-footer">
