--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -3,57 +3,65 @@
 
 
 {% block content %}
-{% include 'list_header.html' %}
-<ul class="nav nav-tabs">
-  <li role="presentation"><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
-  <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
-  <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">{% trans 'Signup form' %}</a></li>
-  <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-settings' list_item.uuid %}">{% trans 'Settings' %}</a></li>
-</ul>
-<br>
-<form method="POST" class="form-inline">
-    {% csrf_token %}
-  <div class="form-group">
-    <label for="{{form_object.name.auto_id}}">{{form_object.name.label}}</label>
-    <input type="text" class="form-control" name="{{form_object.name.name}}" id="{{form_object.name.auto_id}}" placeholder="" value="{{form_object.name.value}}">
+  {% include 'list_header.html' %}
+  <ul class="nav nav-tabs">
+    <li role="presentation"><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
+    <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
+    <li role="presentation"><a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">{% trans 'Signup form' %}</a></li>
+    <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-settings' list_item.uuid %}">{% trans 'Settings' %}</a></li>
+  </ul>
+  <br>
+  <form method="POST" class="form-inline">
+      {% csrf_token %}
+    <div class="form-group">
+      <label for="{{form_object.name.auto_id}}">{{form_object.name.label}}</label>
+      <input type="text" class="form-control" name="{{form_object.name.name}}" id="{{form_object.name.auto_id}}" placeholder="" value="{{form_object.name.value}}">
+    </div>
+    <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
+  </form>
+  {% for error in form_object.name.errors %}
+    <span class="error-block text-danger">{{error}}</span>
+  {% endfor %}
+  <hr>
+  <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#subscriber_list_delete_confirmation">
+    {% if list_item.count_validated_subscribers %}
+      {% trans 'Delete all'%} ({{list_item.count_validated_subscribers}} {% trans 'subscribers'})
+    {% else %}
+      {% trans 'Delete this list' %}
+    {% endif %}
+  </a>
+
+  {% include 'import_csv.html' %}
+
+  <div id='subscriber_list_delete_confirmation' class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form method='POST' action="{% url 'subscriber-management-list-delete' list_item.uuid %}">
+          {% csrf_token %}
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Please confirm deletion of {{list_item.name}}</h4>
+          </div>
+          <div class="modal-body">
+            <p>
+              <strong>Are you sure you want to delete {{list_item.name}}?</strong>
+            </p>
+            <ul>
+              <li>{{list_item.count_validated_subscribers}} {% trans 'subscribers will be deleted forever' %}.</li>
+            </ul>
+            <ul>
+              <li>This newsletter list won't be able to accept new subscribers.</li>
+            </ul>
+            <ul>
+              <li>All sign-up form integrations (if any) will stop working.</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">No, keep it</a>
+            <button type="submit" class="btn btn-danger">Yes, delete it</button>
+          </div>
+        </form>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
   </div>
-  <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
-</form>
-{% for error in form_object.name.errors %}
-  <span class="error-block text-danger">{{error}}</span>
-{% endfor %}
-<hr>
-<a href="#" class="btn btn-danger" data-toggle="modal"
-  data-target="#subscriber_list_delete_confirmation">{% trans 'Delete all '%}({{list_item.count_validated_subscribers}})</a>
-
-{% include 'import_csv.html' %}
-
-<div id='subscriber_list_delete_confirmation' class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <form method='POST' action="{% url 'subscriber-management-list-delete' list_item.uuid %}">
-        {% csrf_token %}
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Please confirm deletion of {{list_item.name}}</h4>
-        </div>
-        <div class="modal-body">
-          <p>
-            <strong>Are you sure you want to delete {{list_item.name}}?</strong>
-          </p>
-          <ul>
-            <li>All the information will be lost forever.</li>
-          </ul>
-          <ul>
-            <li>{{list_item.count_validated_subscribers}} {% trans 'subscribers will be deleted' %}.</li>
-          </ul>
-        </div>
-        <div class="modal-footer">
-          <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">No, keep it</a>
-          <button type="submit" class="btn btn-danger">Yes, delete it</button>
-        </div>
-      </form>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div>
 {% endblock %}
