--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -35,7 +35,8 @@
       <hr>
       <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#subscriber_list_delete_confirmation">
         {% if list_item.count_validated_subscribers %}
-          {% trans 'Delete this list' %} ({{list_item.count_validated_subscribers}} {% trans 'subscribers' %})
+          {% trans 'Delete this list' %}
+          ({{list_item.count_validated_subscribers|intcomma}} {% trans 'subscribers' %})
         {% else %}
           {% trans 'Delete this list' %}
         {% endif %}
@@ -60,7 +61,7 @@
               <strong>Are you sure you want to delete {{list_item.name}}?</strong>
             </p>
             <ul>
-              <li>{{list_item.count_validated_subscribers}} {% trans 'subscribers will be deleted forever' %}.</li>
+              <li>{{list_item.count_validated_subscribers|intcomma}} {% trans 'subscribers will be deleted forever' %}.</li>
             </ul>
             <ul>
               <li>This newsletter list won't be able to accept new subscribers.</li>
