Fix display of subscriber count in campaign management.

--- a/campaign_management/templates/campaign_header.html
+++ b/campaign_management/templates/campaign_header.html
@@ -75,7 +75,7 @@ janet@gmail.com, Janet Dupont'></textarea>
             <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control">
             {% for list in lists %}
             <option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
-              {{list.name}} &mdash; {{list.count_subscribers}} {% trans 'subscriber' %}{{list.count_subscribers|pluralize}}
+              {{list.name}} &mdash; {{list.count_validated_subscribers}} {% trans 'subscriber' %}{{list.count_validated_subscribers|pluralize}}
             </option>
             {% endfor %}
             </select>
