--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -47,7 +47,7 @@
             {% endif %}
             <strong>Subject:</strong> {{ campaign.email_subject }}
             <br />
-            <strong>Sent to:</strong> {{ campaign.email_list.count_subscribers|intcomma }} subscriber{{ campaign.email_list.count_subscribers|pluralize }}
+            <strong>Sent to:</strong> {{ campaign.email_list.count_validated_subscribers|intcomma }} subscriber{{ campaign.email_list.count_validated_subscribers|pluralize }}
             <br />
             <small class='text-muted'>created: {{ campaign.created }}</small>
             </p>
