Add option to specify Reply To.

--- a/campaign_management/templates/campaign_header.html
+++ b/campaign_management/templates/campaign_header.html
@@ -38,9 +38,13 @@
         <h3>Email Header</h3>
         <div class="form-group">
           <label for="{{form.email_from_name.auto_id}}" class='control-label'>From name:</label>
-          <input id="{{form.email_from_name.auto_id}}" name="{{form.email_from_name.name}}" class='form-control'
-                 tabindex='3' maxlength='{{form.email_from_name.field.max_length}}'
-                 value='{{form.email_from_name.value|default:user.first_name}}'/>
+          <input id="{{form.email_from_name.auto_id}}"
+                 name="{{form.email_from_name.name}}"
+                 class='form-control'
+                 tabindex='3'
+                 maxlength='{{form.email_from_name.field.max_length}}'
+                 value='{{form.email_from_name.value|default:user.first_name}}'
+                 required />
           <div class='help-block'>The name your recipients will see in the <code>From:</code> field.</div>
         </div>
         <div class="form-group">
@@ -51,8 +55,21 @@
                  class='form-control'
                  tabindex='3'
                  maxlength='{{form.email_from_email.field.max_length}}'
-                 value='{{form.email_from_email.value|default:user.email}}'/>
+                 value='{{form.email_from_email.value|default:user.email}}'
+                 required />
           <div class='help-block'>The email address your recipients will see in the <code>From:</code> field.</div>
+        </div>
+        <div class="form-group">
+          <label for="{{form.email_reply_to_email.auto_id}}" class='control-label'>Reply To email:</label>
+          <input type='email'
+                 id="{{form.email_reply_to_email.auto_id}}"
+                 name="{{form.email_reply_to_email.name}}"
+                 class='form-control'
+                 tabindex='3'
+                 maxlength='{{form.email_reply_to_email.field.max_length}}'
+                 value='{{form.email_reply_to_email.value|default:user.email}}'
+                 required />
+          <div class='help-block'>The email address where your subscribers can reply to.</div>
         </div>
         <div class="form-group">
           <label for="{{form.email_subject.auto_id}}" class='control-label'>Email subject:</label>
